# SuperaAtomic

./: setup.py
python/supera/: __init__.py
src/: CMakeLists.txt
src/supera/: CMakeLists.txt
src/supera/algorithm/: AlgorithmBase.h  BBoxInteraction.h  CMakeLists.txt  LArTPCMLReco3D.cxx  LArTPCMLReco3D.h  LinkDef.h  ParticleIndex.cxx  ParticleIndex.h
src/supera/base/: CMakeLists.txt  Configurable.h  LinkDef.h  Point.cxx  Point.h  SuperaType.h  base_pybind.cxx  base_pybind.h
src/supera/data/: CMakeLists.txt  Event.cxx  Event.h  Flash.cxx  Flash.h  LinkDef.h  Neutrino.cxx  Neutrino.h  Particle.cxx  Particle.h  TriggerMeta.h  data_pybind.cxx  data_pybind.h
src/supera/process/: CMakeLists.txt  Driver.cxx  Driver.h  LinkDef.h  process_pybind.cxx  process_pybind.h
